# serde_ton

./: Cargo.toml  README.md
benches/: benchmark.rs
docs/: ton_binary_format.md  ton_type_list.md  ton_types_binary.md
src/: c_de.rs  de.rs  error.rs  lib.rs  main.rs  ser.rs
src/traits/: de.rs  mod.rs  reader.rs  ser.rs
src/value/: map.rs  mod.rs  num.rs  prefix.rs  ton_value.rs  value.md  value.rs
tests/: ser.rs
