[package]
name = "serde_ton"
version = "0.1.0"
edition = "2024"

[features]
preserve_order = []

[dependencies]
half = { version = "2.4.1", features = ["serde"] }
serde = { version = "1.0.218", features = ["derive"] }
uuid = "1.13.1"
chrono = { version = "0.4.39", features = ["serde"] }
serde_json = "1.0.138"

criterion = "0.5.1"

[[bench]]
name = "benchmark"
harness = false

[profile.release]
opt-level = "z"       # サイズ最適化
lto = "fat"           # より積極的な Link Time Optimization
debug = false         # デバッグ情報の削減
codegen-units = 1     # コード生成ユニット数を1にして最適化を高める
panic = "abort"       # パニック時のオーバーヘッド削減
strip = "symbols"     # 不要なシンボルを削除
